<resources>
    <string name="app_name">Stree</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sos">SOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="problems">Problems</string>
    <string name="financial_empowerment">Financial Empowerment</string>
    <string name="skill_development">Skill Development</string>
    <string name="awareness">Awareness</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="stree">Stree</string>
    <string name="register">Register</string>
    <string name="contact_seller">CONTACT  SELLER</string>
    <string name="loading">Loading</string>
    <string name="product_image">Product image</string>
    <string name="upload">Upload</string>
    <string name="temp">temp</string>
    <string name="emergency">Emergency</string>
    <string name="profile">profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="name">Name</string>
    <string name="number">1111111111</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="information">Information</string>
    <string name="add_product">Add Product</string>
    <string name="save">Save</string>
    <string name="Rs">\u20B9</string>
</resources>